# triton-sandbox

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml
benchmarks/common/: const.py
benchmarks/common/triton_client/: utils.py
benchmarks/concurrent_model_exec/: Makefile  client.py  client_utils.py  docker-compose.yaml
benchmarks/docker/: Dockerfile  Makefile
benchmarks/ensemble_model_overhead/: Makefile  README.md  client.py
benchmarks/ensemble_model_overhead/docker/: Dockerfile
benchmarks/ensemble_model_overhead/dummy_model/: const.py  model.py
benchmarks/ensemble_model_overhead/utils/: client.py
benchmarks/onnx_backend/: Makefile  README.md  client_cnn.py  client_transformer.py  docker-compose.yaml
benchmarks/onnx_backend/docker/: Dockerfile  requirements-gpu.txt  requirements.txt
benchmarks/onnx_backend/models/: const.py  simple_cnn.py  simple_transformer.py
benchmarks/onnx_backend/utils/: client.py
benchmarks/triton_utils/: python_backend.py
data/: .gitignore
data/tools/: create_video_from_image.py
deepstream/common/gstreamer/: elements.py  input_stream.py  probe_funcs.py
deepstream/common/nvidia/: FPS.py  README.md  bus_call.py  platform_info.py  utils.py
deepstream/concurrent_model_exec/: Makefile  docker-compose.yaml  run_pipeline.py
deepstream/concurrent_model_exec/configs/: dstest1_pgie_config.txt  simple_cnn_l1.txt  simple_cnn_l2.txt  simple_cnn_l3.txt  streammux.txt
deepstream/concurrent_model_exec/docker/: Dockerfile  Makefile  requirements.txt
models/simple_cnn/: const.py  simple_cnn.py
models/simple_cnn/tests/: test_pytorch.py
models/simple_cnn/tools/: convert_to_onnx.py  convert_to_onnx_torchscript.py
models/simple_transformer/: const.py  simple_transformer.py
models/simple_transformer/tests/: test_onnx_runtime.py  test_pytorch.py
models/simple_transformer/tools/: convert_to_onnx.py
nsight/: Makefile
open_telemetory/otel-getting-started/: Makefile  README.md  app.py  pyproject.toml
open_telemetory/otel_in_ml_pipline/: README.md  docker-compose.yaml
open_telemetory/otel_in_ml_pipline/app/: run_pipeline.py
pytriton/: docker-compose.yaml
pytriton/01_quick_start/: client.py  docker-compose.yaml
pytriton/02_deploying_models/: README.md  input1.json  model.py  run_01_init_triton.py
pytriton/docker/: Dockerfile  requirements.txt
pytriton/linear_random_pytorch/: README.md  client.py  server.py
pytriton/quick-start/: README.md  input1.json  server.py
triton_benchmarks/ensemble_model_v0/: Makefile  client.py  docker-compose.yaml
triton_benchmarks/ensemble_model_v0/dummy_model/: wrapper.py
triton_benchmarks/ensemble_model_v0/utils/: client.py  const.py
triton_benchmarks/preprocss_inference_ensemble/: Makefile  README.md  client.py  docker-compose-cpu.yaml  docker-compose.yaml  run_analysis.py
triton_benchmarks/preprocss_inference_ensemble/docker/: Dockerfile  requirements-gpu.txt
triton_benchmarks/preprocss_inference_ensemble/samples/: README.md
triton_benchmarks/preprocss_inference_ensemble/triton/: triton_utils.py
triton_benchmarks/preprocss_inference_ensemble/utils/: analysis.py  client.py
triton_benchmarks/triton_utils/: python_backend.py
triton_experiments/common/triton_client/: const.py  utils.py
triton_experiments/concurrent_model_exec/: Makefile  README.md  client.py  client_utils.py  docker-compose.yaml
triton_experiments/concurrent_model_exec/tests/: test_clients.py  test_clients_utils.py
triton_experiments/ensemble_model_overhead/: Makefile  README.md  client.py  docker-compose-cpu.yaml  docker-compose.yaml
triton_experiments/ensemble_model_overhead/docker/: requirements-gpu.txt  (+1 more)
triton_experiments/onnx_backend/: Makefile  README.md  client_cnn.py  client_transformer.py  docker-compose.yaml
triton_experiments/triton_utils/: python_backend.py
triton_tutorials/: README.md  docker-compose.yaml
triton_tutorials/conceptual_guide/: .gitignore
triton_tutorials/docker/: Dockerfile  requirements.txt
(+136 files in other folders)
