[tool.poetry]
name = "mlops-sandbox"
version = "0.1.0"
description = ""
authors = ["Naoya Yoshimura <yoshimura708x@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
click = "^8.1.7"
loguru = "^0.7.2"
onnx = "^1.16.1"
onnxsim = "^0.4.36"
onnxruntime = "^1.18.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
