[tool.poetry]
name = "mlops-sandbox"
version = "0.1.0"
description = ""
authors = ["Naoya Yoshimura <yoshimura708x@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
click = "^8.1.7"
loguru = "^0.7.2"
onnx = "^1.16.1"
onnxsim = "^0.4.36"
onnxruntime = "^1.18.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-rsxX -l --tb=short --strict-markers -v --ff --setup-show"
markers = [
    "unit: mark a test as a unit test",
    "inference: mark a test as an inference test",
]
testpaths = ["models/"]


packages = [
    { include = "models" }
]


[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
  benchmarks/
  | deepstream/
  | pytriton/
  | triton_tutorials/
)
'''


[tool.isort]
profile = "black"
src_paths = ["models"]


[tool.pylint.format]
max-line-length = 100
